- Show mouseover stats for all players regardless of faction
- three new sounds
- Use GetPlayerInfoByGUID when an entry shows up in the combat log
- Added option to dynamically resize the warning window
- Added options to hide warning window in battlegrounds and instances
- Remove "sort" and "pvp stats" buttons
- Added options to notify when a nice/hated player joins the group
- Improved background artwork
- Fixed dragon around target frame
- Updated libraries
- Save warning frame position to the database
- Added support for context menu for pitbull 4
- Added ability to customize the macro on player name clicks in the warnframe
- Added option to change the length of time data remains in the warnframe
- Added options to change text color of the warnframe
- Fixed displaying eventmap tooltip (broken by Blizzard's Quest POI changes in 3.3)
- Redraw eventmap when a new death is recorded
- Separated localization from source
- Allow name searches in last seen list

4.21:
- Disabled dragon around target frame due to API change

4.21 beta:
- Fixed semi-transparency in KoS GUI texture
- Made Name/Reason the default KoS view
- Added an previous view button
- If a level 10+ player is detected correct level guessing to at least 10+
- Update for 3.3 patch

4.2 beta:
- Changed appearance of KoS GUI, allowing for easier sorting, and more compact
  display of information
- Use the wowace/curse auto-generated locale tool
- Updated ace library

4.11 beta:
- Updated version number for 3.2 patch
- Updated libraries to latest tagged versions
- Distributed tracking bugfix

4.10beta1:
- Add distributed tracking
- Fixed PvPStats

4.01:
- Increased maxLetters for dialogs

4.01c beta:
- fixed a bug where old data was imported incorrectly

4.01b beta:
- Fixed bug always showing the minimap button on startup even if disabled

4.01a beta:
- Fixed bug in PvPDataGatherer

4.01 beta:
- Added "seen" count
- Added back the kadd command
- Enabled guild synchronization